# SetInfo-Protector

./: CMakeLists.txt  example.json
.github/workflows/: cmake.yml
include/sdk/: cdll.hpp  cmd.hpp  g_pos.hpp  steamuser.hpp
include/sip/: const.hpp  init.hpp  interface.hpp  sighelper.hpp  util.hpp
include/sip/inject/: const.hpp  init.hpp  interface.hpp  sighelper.hpp  util.hpp
include/sip/settings/: address.hpp  config.hpp  cvar.hpp  info.hpp  server.hpp
src/: init.cpp  main.cpp  sighelper.cpp  util.cpp
src/sdk/: steamuser.cpp
src/sip/inject/: init.cpp  interface.cpp  sighelper.cpp  util.cpp
src/sip/settings/: address.cpp  config.cpp
